# Agencia-Onibus

./: README.md  pyproject.toml
agencia/agencia/: asgi.py  settings.py  urls.py  wsgi.py
agencia/api/: views.py
agencia/core/: models.py  serializers.py  views.py
agencia/core/migrations/: 0001_initial.py  0002_alter_bilhete_options.py  0003_bilhete_poltrona-unica.py
agencia/core/static/core/: style.css  style2.css
agencia/core/templates/core/: cadastrocliente.html  comprar_bilhete.html  display.html  index.html  verlinhas.html
